--- a/idex.html
+++ b/idex.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equip="X-UA-Compatible" content="IE-edge">
-        <meta name="viewport" content="width=device-width,initial-sale=1.0">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="stye.css">
         <script src="script.js" defer></script>
         <title>Ermina's Photos</title>
