--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equip="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="stye.css">
+        <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
         <title>Ermina's Photos</title>
         
